--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint *.js",
     "setup": "npm i && npm test",
     "test": "npm run lint && tape test/*.js | tspec",
-    "build": "echo No build task specified.",
+    "build": "fly",
     "deploy": "npm run test && git push origin master && npm publish",
     "test-ci": "node --harmony --harmony_arrow_functions ./node_modules/tape/bin/tape test/*.js"
   },
